--- a/Day4/stack.yaml
+++ b/Day4/stack.yaml
@@ -34,13 +34,12 @@ packages:
 # These entries can reference officially published versions as well as
 # forks / in-progress versions pinned to a git hash. For example:
 #
-
-extra-deps:
+# extra-deps:
+# - acme-missiles-0.3
+# - git: https://github.com/commercialhaskell/stack.git
+#   commit: e7b331f14bcffb8367cd58fbfc8b40ec7642100a
 #
 # extra-deps: []
-#
-ghc-options:
-  "*": -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints
 
 # Override default flag values for local packages and extra-deps
 # flags: {}
