--- a/Day4/Day4.cabal
+++ b/Day4/Day4.cabal
@@ -17,4 +17,7 @@ executable Day4
   hs-source-dirs:      src
   main-is:             Main.hs
   default-language:    Haskell2010
-  build-depends:       base >= 4.7 && < 5
+  build-depends:       
+    base >= 4.7 && < 5, 
+    parsec >= 3.1.13.0
+                      
