--- a/Day11/Day11.cabal
+++ b/Day11/Day11.cabal
@@ -18,5 +18,6 @@ executable Day11
   main-is:             Main.hs
   default-language:    Haskell2010
   build-depends:       base >= 4.7 && < 5,
-                       parsec,
-                       lens
+                       parsec
+                     , lens
+                     , containers
