--- a/Day11/Day11.cabal
+++ b/Day11/Day11.cabal
@@ -19,5 +19,6 @@ executable Day11
   default-language:    Haskell2010
   build-depends:       base >= 4.7 && < 5,
                        parsec
-                     , lens
+                     , mtl
                      , containers
+                     , gloss
